# for display continuity sake please use 2 spaces instead of tabs

2014-03-02 ede
  * add RAM size detection to mac/linux start scripts
    - uses either 80% or size-1GiB, whichever is bigger
    - uses max. 3GiB for 32bit jre's

2014-02-28 Matthias Scholz <ms@jammerhund.de>
  * SaveLegendPlugIn now prints the word "Project" in front of the projectname
    in the rootnode and is correct left aligned.

2014-01-25 mmichaud <m.michael.michaud@orange.fr>
  * Fixed a bug #354 : OpenRecentPlugIn broken.

2014-01-15 mentaer <sstein@geo.uzh.ch>
  * New analysis tool (CalculateDistancesPlugIn) to calculate distances between 
    two sets of geometries. Calculates shortest distance, centroid distance and 
    Hausforff distance.
    
2014-01-06 mmichaud <m.michael.michaud@orange.fr>
  * fix a regression in GeometryFunctionPlugIn (non editable layer throws NPE)

2014-01-06 Matthias Scholz <ms@jammerhund.de>
  * Enhancement of the AbstractCursorTool for XOR painting Image's as visual
    indicator too. One usecase is the SuperZoomPanTool. If you use the wheel in
    this tool for zooming you get more information as it was possible with a
    simple shape.

2013-12-24 ede "happy holidays"
  * update jts to 1.14 snapshot supposedly containing 
    spatiallite multigeometry fix

2013-12-10 mmichaud <m.michael.michaud@orange.fr>
  * Fix #352 : Layers loaded from file can have duplicate names

2013-11-30 Matthias Scholz <ms@jammerhund.de>
  * Some improvements for SaveLegendPlugin:
    - code cleanup: fix imports and @Overrides
    - ask befor overwrite an existing file
    - fileselection for PNG and only files
    - moved fileChooser variable from saveLegend() to a class variable, thereby
      the last directory is remembered
    - all selected layers will now be saved, not only one
    - avoid "terrible" filechooser hight through to many selected layers or 
      themed layers
    - for normal, non themed layers the fill and line color is now visible
